<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/single_user_iv_profileImg"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorAccentLight"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_person" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            >

            <TextView
                android:id="@+id/single_user_tv_displayName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Display Name :"
                android:textStyle="bold"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/single_user_tv_Rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/rank"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/single_user_tv_Status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/status"/>
            <TextView
                android:id="@+id/single_user_tv_Request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/request"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>